--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -15,4 +15,8 @@
 </p>
 {{ post.body|truncatewords:30|linebreaks }}
 {% endfor %}
+
+<!-- adding pagination -->
+{% include "pagination.html" with page=posts %}
+
 {% endblock %}
