--- a/blog/static/styles/blog.css
+++ b/blog/static/styles/blog.css
@@ -8,7 +8,10 @@ a {
   color: #00abff;
   text-decoration: none;
 }
-
+span {
+  font-size: larger;
+  margin: 0 4px;
+}
 h1 {
   font-weight: normal;
   border-bottom: 1px solid #bbb;
